--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,7 +12,7 @@
 
     <!-- PWA Meta Tags -->
     <meta name="theme-color" content="#7c3aed">
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="MyFoil">
     <link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
